--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Engram - IPU Study Materials Hub</title>
     <meta name="description" content="The centralized, No BS Open-Source hub for IP University study materials" />
-    <meta name="author" content="Engram Team" />
-
-    <meta property="og:title" content="Engram - IPU Study Materials Hub" />
+    <meta name="author" content="Engram Team" />    <meta property="og:title" content="Engram - IPU Study Materials Hub" />
     <meta property="og:description" content="The centralized, No BS Open-Source hub for IP University study materials" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@engram_ipu" />
+    <meta name="twitter:image" content="/placeholder.svg" />
+    
+    <!-- Analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="d6534cc6-b47f-43aa-9b09-0e6c20ee5501"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
-
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
