Minor UI improvements

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <title>Engram - IPU Study Materials Hub</title>
     <meta name="description" content="The centralized, No BS Open-Source hub for IP University study materials" />    <meta name="author" content="Engram Team" />
     <meta property="og:title" content="Engram - IPU Study Materials Hub" />
-    <meta property="og:description" content="The centralized, No BS Open-Source hub for IP University study materials" />
-    <meta property="og:type" content="website" />
+    <meta property="og:description" content="The centralized, No BS Open-Source hub for IP University study materials" />    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://engram.kuber.studio" />
-    <meta property="og:image" content="https://engram.kuber.studio/placeholder.svg" />
+    <meta property="og:image" content="https://engram.kuber.studio/assets/web-app-manifest-512x512.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@engram_ipu" />
-    <meta name="twitter:image" content="https://engram.kuber.studio/placeholder.svg" />
+    <meta name="twitter:card" content="summary_large_image" />    <meta name="twitter:site" content="@engram_ipu" />
+    <meta name="twitter:image" content="https://engram.kuber.studio/assets/web-app-manifest-512x512.png" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96x96.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="manifest" href="/assets/site.webmanifest">
     
     <!-- Analytics -->
     <script defer src="https://cloud.umami.is/script.js" data-website-id="d6534cc6-b47f-43aa-9b09-0e6c20ee5501"></script>
